--- a/examples/v-jepa-video-search/intra-video.ipynb
+++ b/examples/v-jepa-video-search/intra-video.ipynb
@@ -5135,8 +5135,9 @@
     "!pip install -q torchcodec==0.2.1\n",
     "\n",
     "import torch\n",
+    "\n",
     "print(\"Torch:\", torch.__version__)\n",
-    "from torchcodec.decoders import VideoDecoder # validate it works"
+    "from torchcodec.decoders import VideoDecoder  # validate it works"
    ]
   },
   {
@@ -5156,16 +5157,25 @@
     "\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "def extract_n_frames(video_path, n_frames):\n",
     "    vr = VideoDecoder(video_path)\n",
     "    total_frames = vr.metadata.num_frames_from_content\n",
     "\n",
     "    extracted_frames = []\n",
-    "    \n",
+    "\n",
     "    # Initialize dimensions with defaults or based on metadata if video has no frames\n",
-    "    frame_height = vr.metadata.height if hasattr(vr.metadata, 'height') and vr.metadata.height is not None else 224\n",
-    "    frame_width = vr.metadata.width if hasattr(vr.metadata, 'width') and vr.metadata.width is not None else 224\n",
-    "    num_channels = 3 # Assuming RGB\n",
+    "    frame_height = (\n",
+    "        vr.metadata.height\n",
+    "        if hasattr(vr.metadata, \"height\") and vr.metadata.height is not None\n",
+    "        else 224\n",
+    "    )\n",
+    "    frame_width = (\n",
+    "        vr.metadata.width\n",
+    "        if hasattr(vr.metadata, \"width\") and vr.metadata.width is not None\n",
+    "        else 224\n",
+    "    )\n",
+    "    num_channels = 3  # Assuming RGB\n",
     "\n",
     "    if total_frames > 0:\n",
     "        num_frames_to_extract_from_video = min(n_frames, total_frames)\n",
@@ -5173,7 +5183,9 @@
     "        if num_frames_to_extract_from_video == 1:\n",
     "            frame_indices = [total_frames // 2]\n",
     "        else:\n",
-    "            frame_indices = np.linspace(0, total_frames - 1, num_frames_to_extract_from_video, dtype=int).tolist()\n",
+    "            frame_indices = np.linspace(\n",
+    "                0, total_frames - 1, num_frames_to_extract_from_video, dtype=int\n",
+    "            ).tolist()\n",
     "\n",
     "        video_frames = vr.get_frames_at(indices=frame_indices).data\n",
     "        extracted_frames.append(video_frames)\n",
@@ -5182,13 +5194,17 @@
     "        if video_frames.shape[0] > 0:\n",
     "            frame_height, frame_width, num_channels = video_frames.shape[1:]\n",
     "\n",
-    "    current_extracted_count = sum([arr.shape[0] for arr in extracted_frames]) if extracted_frames else 0\n",
+    "    current_extracted_count = (\n",
+    "        sum([arr.shape[0] for arr in extracted_frames]) if extracted_frames else 0\n",
+    "    )\n",
     "    frames_to_add = n_frames - current_extracted_count\n",
     "\n",
     "    if frames_to_add > 0:\n",
     "        random_frames_list = []\n",
     "        for _ in range(frames_to_add):\n",
-    "            random_rgb_content = np.random.randint(0, 256, size=(frame_height, frame_width, num_channels), dtype=np.uint8)\n",
+    "            random_rgb_content = np.random.randint(\n",
+    "                0, 256, size=(frame_height, frame_width, num_channels), dtype=np.uint8\n",
+    "            )\n",
     "            random_frames_list.append(random_rgb_content)\n",
     "        extracted_frames.append(np.array(random_frames_list))\n",
     "\n",
@@ -5197,10 +5213,12 @@
     "    else:\n",
     "        # If n_frames > 0 and no frames could be extracted or generated, raise error\n",
     "        if n_frames > 0:\n",
-    "             raise ValueError(\"Could not extract or generate any frames, even with random content.\")\n",
-    "        else: # n_frames == 0, return empty array\n",
+    "            raise ValueError(\n",
+    "                \"Could not extract or generate any frames, even with random content.\"\n",
+    "            )\n",
+    "        else:  # n_frames == 0, return empty array\n",
     "            return np.array([])\n",
-    "    \n",
+    "\n",
     "    return final_frames"
    ]
   },
@@ -5238,57 +5256,69 @@
    "source": [
     "# Edit this to ingest only N number of videos. If None, all videos are ingested\n",
     "MAX_VIDEOS_INGESTED = None\n",
+    "\n",
+    "\n",
     "def ingest_video_folder(input_dir, n_frames, batch_size=32):\n",
-    "    video_extensions = {'.mp4', '.avi', '.mov', '.mkv', '.wmv', '.flv', '.webm', '.m4v', '.3gp'}\n",
-    "    \n",
+    "    video_extensions = {\n",
+    "        \".mp4\",\n",
+    "        \".avi\",\n",
+    "        \".mov\",\n",
+    "        \".mkv\",\n",
+    "        \".wmv\",\n",
+    "        \".flv\",\n",
+    "        \".webm\",\n",
+    "        \".m4v\",\n",
+    "        \".3gp\",\n",
+    "    }\n",
+    "\n",
     "    input_path = Path(input_dir)\n",
     "    if not input_path.exists():\n",
     "        raise ValueError(f\"Input directory does not exist: {input_dir}\")\n",
-    "    \n",
+    "\n",
     "    video_files = []\n",
-    "    for file_path in input_path.rglob('*'):\n",
+    "    for file_path in input_path.rglob(\"*\"):\n",
     "        if file_path.is_file() and file_path.suffix.lower() in video_extensions:\n",
     "            video_files.append(file_path)\n",
-    "            \n",
+    "\n",
     "    if not video_files:\n",
     "        raise ValueError(f\"No video files found in {input_dir}\")\n",
-    "        \n",
+    "\n",
     "    print(f\"Found {len(video_files)} video files\")\n",
     "\n",
     "    batch_videos_bytes = []\n",
     "    batch_embeddings = []\n",
     "    batch_parent_folders = []\n",
-    "    \n",
+    "\n",
     "    embedding_list_size = None\n",
     "    embedding_value_type = pa.float32()\n",
     "    if MAX_VIDEOS_INGESTED:\n",
     "        video_files = video_files[:MAX_VIDEOS_INGESTED]\n",
     "    for i, video_file in enumerate(video_files, 1):\n",
     "        print(f\"[{i}/{len(video_files)}] Processing: {video_file.name}\")\n",
-    "        \n",
+    "\n",
     "        try:\n",
     "            video_bytes = video_file.read_bytes()\n",
     "\n",
     "            frames_array = extract_n_frames(\n",
-    "                str(video_file), \n",
-    "                n_frames, \n",
+    "                str(video_file),\n",
+    "                n_frames,\n",
     "            )\n",
     "            with torch.no_grad():\n",
     "                video = processor(frames_array, return_tensors=\"pt\").to(model.device)\n",
     "                video_embeddings = model.get_vision_features(**video)\n",
-    "            \n",
+    "\n",
     "            # Current shape: torch.Size([1, 5760, 1408])\n",
-    "            \n",
+    "\n",
     "            # Add a channel dimension to make it compatible with MaxPool2d (N, C, H, W)\n",
     "            # Here, N=1 (re-added as batch), C=1 (single channel), H=5760, W=1408\n",
-    "            pooled_input = video_embeddings.unsqueeze(0) # Becomes [1, 1, 5760, 1408]\n",
-    "            \n",
+    "            pooled_input = video_embeddings.unsqueeze(0)  # Becomes [1, 1, 5760, 1408]\n",
+    "\n",
     "            pooled_embeddings = max_pool_layer(pooled_input)\n",
-    "            \n",
+    "\n",
     "            final_embedding = pooled_embeddings.flatten()\n",
-    "            \n",
+    "\n",
     "            embedding_flat_list = final_embedding.cpu().numpy().tolist()\n",
-    "            print(f\"len {len(embedding_flat_list)}\") \n",
+    "            print(f\"len {len(embedding_flat_list)}\")\n",
     "            if embedding_list_size is None:\n",
     "                embedding_list_size = len(embedding_flat_list)\n",
     "\n",
@@ -5300,23 +5330,32 @@
     "\n",
     "            if len(batch_videos_bytes) == batch_size:\n",
     "                if embedding_list_size is None:\n",
-    "                    raise ValueError(\"Embedding list size could not be determined. Process at least one video successfully.\")\n",
+    "                    raise ValueError(\n",
+    "                        \"Embedding list size could not be determined. Process at least one video successfully.\"\n",
+    "                    )\n",
     "\n",
-    "                schema = pa.schema([\n",
-    "                    pa.field(\"video_bytes\", pa.large_binary()),\n",
-    "                    pa.field(\"embeddings\", pa.list_(pa.float32(),7920) ),\n",
-    "                    pa.field(\"task_type\", pa.string())\n",
-    "                ])\n",
-    "                \n",
-    "                yield pa.RecordBatch.from_arrays([\n",
-    "                    pa.array(batch_videos_bytes, type=pa.large_binary()),\n",
-    "                    pa.FixedSizeListArray.from_arrays(\n",
-    "                        pa.array(sum(batch_embeddings, []), type=embedding_value_type), \n",
-    "                        embedding_list_size\n",
-    "                    ),\n",
-    "                    pa.array(batch_parent_folders, type=pa.string())\n",
-    "                ], schema=schema)\n",
-    "                \n",
+    "                schema = pa.schema(\n",
+    "                    [\n",
+    "                        pa.field(\"video_bytes\", pa.large_binary()),\n",
+    "                        pa.field(\"embeddings\", pa.list_(pa.float32(), 7920)),\n",
+    "                        pa.field(\"task_type\", pa.string()),\n",
+    "                    ]\n",
+    "                )\n",
+    "\n",
+    "                yield pa.RecordBatch.from_arrays(\n",
+    "                    [\n",
+    "                        pa.array(batch_videos_bytes, type=pa.large_binary()),\n",
+    "                        pa.FixedSizeListArray.from_arrays(\n",
+    "                            pa.array(\n",
+    "                                sum(batch_embeddings, []), type=embedding_value_type\n",
+    "                            ),\n",
+    "                            embedding_list_size,\n",
+    "                        ),\n",
+    "                        pa.array(batch_parent_folders, type=pa.string()),\n",
+    "                    ],\n",
+    "                    schema=schema,\n",
+    "                )\n",
+    "\n",
     "                batch_videos_bytes = []\n",
     "                batch_embeddings = []\n",
     "                batch_parent_folders = []\n",
@@ -5326,23 +5365,30 @@
     "\n",
     "    if batch_videos_bytes:\n",
     "        if embedding_list_size is None:\n",
-    "            print(\"No videos processed successfully to determine embedding size for final batch.\")\n",
+    "            print(\n",
+    "                \"No videos processed successfully to determine embedding size for final batch.\"\n",
+    "            )\n",
     "            return\n",
     "\n",
-    "        schema = pa.schema([\n",
-    "            pa.field(\"video_bytes\", pa.large_binary()),\n",
-    "            pa.field(\"embeddings\", pa.list_(pa.float32(),7920) ),\n",
-    "            pa.field(\"task_type\", pa.string())\n",
-    "        ])\n",
+    "        schema = pa.schema(\n",
+    "            [\n",
+    "                pa.field(\"video_bytes\", pa.large_binary()),\n",
+    "                pa.field(\"embeddings\", pa.list_(pa.float32(), 7920)),\n",
+    "                pa.field(\"task_type\", pa.string()),\n",
+    "            ]\n",
+    "        )\n",
     "\n",
-    "        yield pa.RecordBatch.from_arrays([\n",
-    "            pa.array(batch_videos_bytes, type=pa.large_binary()),\n",
-    "            pa.FixedSizeListArray.from_arrays(\n",
-    "                pa.array(sum(batch_embeddings, []), type=embedding_value_type), \n",
-    "                embedding_list_size\n",
-    "            ),\n",
-    "            pa.array(batch_parent_folders, type=pa.string())\n",
-    "        ], schema=schema)\n",
+    "        yield pa.RecordBatch.from_arrays(\n",
+    "            [\n",
+    "                pa.array(batch_videos_bytes, type=pa.large_binary()),\n",
+    "                pa.FixedSizeListArray.from_arrays(\n",
+    "                    pa.array(sum(batch_embeddings, []), type=embedding_value_type),\n",
+    "                    embedding_list_size,\n",
+    "                ),\n",
+    "                pa.array(batch_parent_folders, type=pa.string()),\n",
+    "            ],\n",
+    "            schema=schema,\n",
+    "        )\n",
     "\n",
     "    print(f\"Processing complete for all videos in {input_dir}\")"
    ]
@@ -5360,11 +5406,13 @@
     "import pyarrow as pa\n",
     "\n",
     "\n",
-    "schema = pa.schema([\n",
-    "    pa.field(\"video_bytes\", pa.large_binary()),\n",
-    "    pa.field(\"embeddings\", pa.list_(pa.float32(), 7920)),\n",
-    "    pa.field(\"task_type\", pa.string())\n",
-    "])\n"
+    "schema = pa.schema(\n",
+    "    [\n",
+    "        pa.field(\"video_bytes\", pa.large_binary()),\n",
+    "        pa.field(\"embeddings\", pa.list_(pa.float32(), 7920)),\n",
+    "        pa.field(\"task_type\", pa.string()),\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -5381,7 +5429,9 @@
     "\n",
     "db = lancedb.connect(\"videodb\")\n",
     "\n",
-    "tbl = db.create_table(\"tbl\", schema=schema, data=ingest_video_folder(\"UCF-101\", 20), mode=\"overwrite\")"
+    "tbl = db.create_table(\n",
+    "    \"tbl\", schema=schema, data=ingest_video_folder(\"UCF-101\", 20), mode=\"overwrite\"\n",
+    ")"
    ]
   },
   {
@@ -5396,14 +5446,12 @@
     "# Or use LanceDB cloud\n",
     "\n",
     "db = lancedb.connect(\n",
-    "  uri=\"db://wikipedia-test\",\n",
-    "  api_key=\"sk-...........====\",\n",
-    "  region=\"us-east-1\"\n",
+    "    uri=\"db://wikipedia-test\", api_key=\"sk-...........====\", region=\"us-east-1\"\n",
     ")\n",
     "\n",
     "tbl = db.create_table(\"tbl\", schema=schema)\n",
     "\n",
-    "#tbl.add(ingest_video_folder(\"UCF-101\", 20))"
+    "# tbl.add(ingest_video_folder(\"UCF-101\", 20))"
    ]
   },
   {
@@ -5468,7 +5516,7 @@
    "source": [
     "from IPython.display import Video\n",
     "\n",
-    "Video(\"guitar.mp4\")\n"
+    "Video(\"guitar.mp4\")"
    ]
   },
   {
@@ -5482,13 +5530,14 @@
    "source": [
     "import torch\n",
     "\n",
+    "\n",
     "def search_table(video_path, limit=1):\n",
     "    frames = extract_n_frames(video_path, 20)\n",
     "    with torch.no_grad():\n",
     "        video = processor(frames, return_tensors=\"pt\").to(model.device)\n",
     "        video_embeddings = model.get_vision_features(**video)\n",
     "\n",
-    "    pooled_input = video_embeddings.unsqueeze(0) # Becomes [1, 1, 5760, 1408]\n",
+    "    pooled_input = video_embeddings.unsqueeze(0)  # Becomes [1, 1, 5760, 1408]\n",
     "\n",
     "    pooled_embeddings = max_pool_layer(pooled_input)\n",
     "\n",
@@ -5496,7 +5545,7 @@
     "\n",
     "    embedding_flat_list = final_embedding.cpu().numpy().tolist()\n",
     "    rs = tbl.search(embedding_flat_list).limit(limit).to_list()\n",
-    "    \n",
+    "\n",
     "    return rs"
    ]
   },
@@ -5516,7 +5565,10 @@
     "import base64\n",
     "from PIL import Image\n",
     "\n",
-    "def display_video_frames_mosaic(video_bytes: bytes, num_frames: int = 5, frame_size: tuple = (160, 90)):\n",
+    "\n",
+    "def display_video_frames_mosaic(\n",
+    "    video_bytes: bytes, num_frames: int = 5, frame_size: tuple = (160, 90)\n",
+    "):\n",
     "    \"\"\"\n",
     "    Extracts N frames from video data (bytes) and displays them as a mosaic in Jupyter.\n",
     "\n",
@@ -5530,8 +5582,14 @@
     "        raise TypeError(\"Input 'video_bytes' must be of type bytes.\")\n",
     "    if not isinstance(num_frames, int) or num_frames <= 0:\n",
     "        raise ValueError(\"num_frames must be a positive integer.\")\n",
-    "    if not isinstance(frame_size, tuple) or len(frame_size) != 2 or not all(isinstance(dim, int) and dim > 0 for dim in frame_size):\n",
-    "        raise ValueError(\"frame_size must be a tuple of two positive integers (width, height).\")\n",
+    "    if (\n",
+    "        not isinstance(frame_size, tuple)\n",
+    "        or len(frame_size) != 2\n",
+    "        or not all(isinstance(dim, int) and dim > 0 for dim in frame_size)\n",
+    "    ):\n",
+    "        raise ValueError(\n",
+    "            \"frame_size must be a tuple of two positive integers (width, height).\"\n",
+    "        )\n",
     "\n",
     "    video_stream = io.BytesIO(video_bytes)\n",
     "\n",
@@ -5553,7 +5611,9 @@
     "\n",
     "        frames_to_extract = []\n",
     "        if num_frames > frame_count:\n",
-    "            print(f\"Warning: num_frames ({num_frames}) is greater than actual frame count ({frame_count}). Extracting all available frames.\")\n",
+    "            print(\n",
+    "                f\"Warning: num_frames ({num_frames}) is greater than actual frame count ({frame_count}). Extracting all available frames.\"\n",
+    "            )\n",
     "            indices = list(range(frame_count))\n",
     "        else:\n",
     "            # Distribute frame extraction evenly\n",
@@ -5565,7 +5625,9 @@
     "            if ret:\n",
     "                # Convert BGR to RGB (OpenCV reads in BGR, PIL/Jupyter expects RGB)\n",
     "                frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-    "                frame_resized = cv2.resize(frame_rgb, frame_size, interpolation=cv2.INTER_AREA)\n",
+    "                frame_resized = cv2.resize(\n",
+    "                    frame_rgb, frame_size, interpolation=cv2.INTER_AREA\n",
+    "                )\n",
     "                frames_to_extract.append(frame_resized)\n",
     "            else:\n",
     "                print(f\"Warning: Could not read frame at index {i}.\")\n",
@@ -5582,15 +5644,15 @@
     "        # Calculate total mosaic size\n",
     "        mosaic_width = grid_cols * frame_size[0]\n",
     "        mosaic_height = grid_rows * frame_size[1]\n",
-    "        \n",
-    "        mosaic_image = Image.new('RGB', (mosaic_width, mosaic_height))\n",
+    "\n",
+    "        mosaic_image = Image.new(\"RGB\", (mosaic_width, mosaic_height))\n",
     "\n",
     "        for i, frame_data in enumerate(frames_to_extract):\n",
     "            row = i // grid_cols\n",
     "            col = i % grid_cols\n",
     "            x_offset = col * frame_size[0]\n",
     "            y_offset = row * frame_size[1]\n",
-    "            \n",
+    "\n",
     "            pil_frame = Image.fromarray(frame_data)\n",
     "            mosaic_image.paste(pil_frame, (x_offset, y_offset))\n",
     "\n",
