chore: Formatting various files.

--- a/examples/RAG-using-Groq/main.ipynb
+++ b/examples/RAG-using-Groq/main.ipynb
@@ -667,26 +667,27 @@
     }
    ],
    "source": [
-    "  with open('scraped_data.json', 'r') as f:\n",
-    "      content_dict = json.load(f)             # Loading scrapped data\n",
+    "with open(\"scraped_data.json\", \"r\") as f:\n",
+    "    content_dict = json.load(f)  # Loading scrapped data\n",
     "\n",
-    "  all_chunks = []\n",
-    "  all_embeddings = []\n",
+    "all_chunks = []\n",
+    "all_embeddings = []\n",
     "\n",
-    "  print(len(content_dict.keys()))\n",
+    "print(len(content_dict.keys()))\n",
     "\n",
-    "  for url, content in list(content_dict.items()):   # storing chunks and embeddings of all stored documents\n",
-    "      print(f\"URL during Chunking : {url}\")\n",
-    "      chunks, embeddings = chunk_data(content)\n",
-    "      for c,e in zip(chunks,embeddings):\n",
-    "          chk = c\n",
-    "          chk.replace(\" \",\"\")\n",
-    "          chk.replace('\\n',\"\")\n",
-    "          if len(chk) < 10 :\n",
-    "              continue\n",
-    "          all_chunks.append(c)\n",
-    "          all_embeddings.append(e)\n",
-    "\n"
+    "for url, content in list(\n",
+    "    content_dict.items()\n",
+    "):  # storing chunks and embeddings of all stored documents\n",
+    "    print(f\"URL during Chunking : {url}\")\n",
+    "    chunks, embeddings = chunk_data(content)\n",
+    "    for c, e in zip(chunks, embeddings):\n",
+    "        chk = c\n",
+    "        chk.replace(\" \", \"\")\n",
+    "        chk.replace(\"\\n\", \"\")\n",
+    "        if len(chk) < 10:\n",
+    "            continue\n",
+    "        all_chunks.append(c)\n",
+    "        all_embeddings.append(e)"
    ]
   },
   {
