--- a/examples/v-jepa-video-search/intra-video.ipynb
+++ b/examples/v-jepa-video-search/intra-video.ipynb
@@ -4372,8 +4372,7 @@
     }
    ],
    "source": [
-    "!unrar x -mt -o+ UCF101.rar\n",
-    "\n"
+    "!unrar x -mt -o+ UCF101.rar"
    ]
   },
   {
