--- a/tutorials/GraphRAG_CSV/main.ipynb
+++ b/tutorials/GraphRAG_CSV/main.ipynb
@@ -387,11 +387,10 @@
     }
    ],
    "source": [
-    "\n",
     "# Create the directory structure\n",
     "!mkdir -p /content/input_people_csv/input\n",
     "\n",
-    "!wget -P /content/input_people_csv/input https://github.com/akashAD98/dummy_data/blob/main/Lancedbai_Full_Employees_GraphRAG_With_DOB.csv\n"
+    "!wget -P /content/input_people_csv/input https://github.com/akashAD98/dummy_data/blob/main/Lancedbai_Full_Employees_GraphRAG_With_DOB.csv"
    ]
   },
   {
