--- a/examples/fintech-ai-agent/fintech-ai-agent.ipynb
+++ b/examples/fintech-ai-agent/fintech-ai-agent.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -89,7 +89,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "!wget --no-check-certificate 'https://drive.google.com/uc?export=download&id=1huZAkbQzTwiELbKbNpghbC2hEBLOqW9V' -O credit_risk_dataset.csv"
+    "!wget https://raw.githubusercontent.com/lancedb/vectordb-recipes/blob/main/examples/fintech-ai-agent/credit_risk_dataset.csv"
    ]
   },
   {
