works on colab too

--- a/tutorials/feature-engineering/feature-engineering-101.ipynb
+++ b/tutorials/feature-engineering/feature-engineering-101.ipynb
@@ -27,7 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --upgrade geneva lancedb kubernetes \"ray[default]\" rerankers pandas pillow transformers torch torchvision open-clip-torch"
+    "!uv pip install --upgrade geneva lancedb kubernetes \"ray[default]\" rerankers pandas transformers torch torchvision open-clip-torch pillow\n",
+    "# working around a couple quirks on Colab:\n",
+    "!uv pip install --force-reinstall numpy scipy"
    ]
   },
   {
@@ -110,6 +112,7 @@
     "import torch\n",
     "import open_clip\n",
     "from typing import Callable\n",
+    "from transformers import BlipProcessor, BlipForConditionalGeneration\n",
     "\n",
     "IMG_DIR = Path(\"fashion-dataset/images\")\n",
     "STYLE_CSV = Path(\"fashion-dataset/styles.csv\")\n",
@@ -391,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import BlipProcessor, BlipForConditionalGeneration\n",
+    "\n",
     "\n",
     "@udf(version=\"0.1\", num_gpus=1 if torch.cuda.is_available() else 0, data_type=pa.string())\n",
     "class GenCaptions(Callable):\n",
@@ -401,7 +404,7 @@
     "\n",
     "    def setup(self):\n",
     "        self.device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "        self.processor = BlipProcessor.from_pretrained(\"Salesforce/blip-image-captioning-base\")\n",
+    "        self.processor = BlipProcessor.from_pretrained(\"Salesforce/blip-image-captioning-base\", use_fast=True)\n",
     "        self.model = BlipForConditionalGeneration.from_pretrained(\"Salesforce/blip-image-captioning-base\")\n",
     "        self.model = self.model.to(self.device).eval()\n",
     "        self.is_loaded=True\n",
@@ -497,7 +500,7 @@
    },
    "outputs": [],
    "source": [
-    "table.search().limit(20).to_pandas()"
+    "table.search().limit(3).to_pandas()"
    ]
   },
   {
