Emphasize incremental computation only

--- a/tutorials/feature-engineering/materialized-views.ipynb
+++ b/tutorials/feature-engineering/materialized-views.ipynb
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now to see all the new Shirts reflected in the `shirts` table, we can simply `refresh()` our materialized view:"
+    "Now to see all the new Shirts reflected in the `shirts` table, we can simply `refresh()` our materialized view. This will pick up all the new Shirts from the original `table`. Importantly, it will only process these 500 new rows! For our demo, that's not a big difference, but imagine a table with 10 years' worth of data that adds new data every day: only processing the new day's data will take about 0.02% of the time as reprocessing the whole table."
    ]
   },
   {
