--- a/tutorials/feature-engineering/feature-engineering-101.ipynb
+++ b/tutorials/feature-engineering/feature-engineering-101.ipynb
@@ -11,7 +11,8 @@
     "We will cover the following steps:\n",
     "1. **Data Ingestion**: Downloading a fashion dataset and loading it into a LanceDB table.\n",
     "2. **Declarative Feature Engineering**: Using Geneva to define and compute features on-the-fly.\n",
-    "3. **Embedding Generation**: Creating vector embeddings for both images and text to enable semantic search."
+    "3. **Embedding Generation**: Creating vector embeddings for both images and text to enable semantic search.\n",
+    "4. **Updating**: Adding more raw data to our table and rerunning our backfills on only the new data"
    ]
   },
   {
@@ -21,7 +22,7 @@
    "outputs": [],
    "source": [
     "!uv pip install --upgrade geneva lancedb kubernetes \"ray[default]\" rerankers pandas transformers torch torchvision open-clip-torch pillow\n",
-    "# working around a couple quirks on Colab:\n",
+    "# working around a quirk on Colab:\n",
     "!uv pip install --force-reinstall numpy scipy"
    ]
   },
@@ -547,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Updating\n",
+    "## 4. Updating\n",
     "\n",
     "Let's add some new clothes to our table and rerun the backfills to add all our derived features. This will only recompute our backfills on the new rows. This doesn't save that much time in this tutorial, but it absolutely does in production. Imagine adding new data daily; you won't want to recompute your costly features on all your data every day!\n",
     "\n",
@@ -581,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Wrapping up\n",
+    "## 5. Wrapping up\n",
     "\n",
     "That's the basics of feature engineering! If you wanted to go on to query this table, you might build indexes, as in the next cell:"
    ]
