Feature Engineering 101 updates (#348)

--- a/tutorials/feature-engineering/feature-engineering-101.ipynb
+++ b/tutorials/feature-engineering/feature-engineering-101.ipynb
@@ -4,22 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The tutorial has three parts:\n",
+    "## Feature Engineering with LanceDB and Geneva\n",
     "\n",
-    "*   **Part 1: Feature Engineering with LanceDB and Geneva**: First, we'll focus on the crucial process of feature engineering. We'll use LanceDB and its Geneva feature engineering framework to enrich our data with meaningful features that will power our search engine.\n",
-    "\n",
-    "*   **Part 2: Materialized Views**: We'll create materialized views: precomputed queries stored as physical tables for quick access.\n",
-    "\n",
-    "*   **Part 3: Feature Engineering on Remote Ray Clusters**: We'll focus on how to make your feature engineering pipeline production-ready, using Geneva Clusters and Manifests to easily work with Ray clusters.\n",
-    "\n",
-    "## Part 1: Feature Engineering with LanceDB and Gene}va\n",
-    "\n",
-    "This notebook is the first part of our tutorial on building an advanced product search engine. In this part, we will focus on the crucial process of feature engineering. We'll start with a raw dataset of fashion products, and ingest it in LanceDB. We'll then use Geneva to enrich our data with meaningful features that will power our search engine.\n",
+    "This notebook will focus on the crucial process of feature engineering. We'll start with a raw dataset of fashion products, ingest it in LanceDB, then enrich our data with meaningful features that we could use to build a search engine or train a model.\n",
     "\n",
     "We will cover the following steps:\n",
     "1. **Data Ingestion**: Downloading a fashion dataset and loading it into a LanceDB table.\n",
     "2. **Declarative Feature Engineering**: Using Geneva to define and compute features on-the-fly.\n",
-    "3. **Embedding Generation**: Creating vector embeddings for both images and text to enable semantic search."
+    "3. **Embedding Generation**: Creating vector embeddings for both images and text to enable semantic search.\n",
+    "4. **Updating**: Adding more raw data to our table and rerunning our backfills on only the new data"
    ]
   },
   {
@@ -29,7 +22,7 @@
    "outputs": [],
    "source": [
     "!uv pip install --upgrade geneva lancedb kubernetes \"ray[default]\" rerankers pandas transformers torch torchvision open-clip-torch pillow\n",
-    "# working around a couple quirks on Colab:\n",
+    "# working around a quirk on Colab:\n",
     "!uv pip install --force-reinstall numpy scipy"
    ]
   },
@@ -65,7 +58,7 @@
    "source": [
     "## Set Scale based on your environment\n",
     "\n",
-    "This example uses geneva locally by default - which means the scale of concurrent jobs will be limited to the system you're working on. Set these params based on your CPU/GPU and memory configs"
+    "This tutorial uses Ray locally to build features, which means the scale of concurrent jobs will be limited to the system you're working on. These parameters are good defaults, but feel free to adjust them if you'd like."
    ]
   },
   {
@@ -83,7 +76,6 @@
     "DATASET_SIZE = 1000 \n",
     "# Increase this if you have more CPUs available and want it to run faster.\n",
     "CONCURRENCY = 4\n",
-    "\n",
     "CHECKPOINT_SIZE = 300"
    ]
   },
@@ -132,12 +124,11 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(STYLE_CSV, on_bad_lines='skip')\n",
-    "df = df.dropna(subset=[\"id\", \"productDisplayName\"])    \n",
-    "df = df.drop_duplicates(subset=[\"id\"], keep=\"first\")    \n",
-    "df = df.sample(DATASET_SIZE) # set to 1000 for testing\n",
+    "df = df.dropna(subset=[\"id\", \"productDisplayName\"])\n",
+    "df = df.drop_duplicates(subset=[\"id\"], keep=\"first\")\n",
     "\n",
-    "def generate_rows(df, img_dir):\n",
-    "    for _, row in df.iterrows():\n",
+    "def generate_rows(df, img_dir, start=0, end=DATASET_SIZE):\n",
+    "    for _, row in df.iloc[start:end].iterrows():\n",
     "        img_path = img_dir / f\"{row['id']}.jpg\"\n",
     "        if not img_path.exists():\n",
     "            continue\n",
@@ -311,7 +302,7 @@
    },
    "outputs": [],
    "source": [
-    "table.search().limit(3).to_pandas()"
+    "table.search().limit(2).to_pandas()"
    ]
   },
   {
@@ -335,9 +326,8 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "@udf(version=\"0.1\", num_gpus=1 if torch.cuda.is_available() else 0, data_type=pa.list_(pa.float32(), 512))\n",
-    "class GenEmbeddings(Callable):\n",
+    "class GenImageEmbeddings(Callable):\n",
     "\n",
     "    def __init__(self):\n",
     "        self.is_loaded=False\n",
@@ -380,8 +370,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "@udf(version=\"0.1\", num_gpus=1 if torch.cuda.is_available() else 0, data_type=pa.string())\n",
     "class GenCaptions(Callable):\n",
     "\n",
@@ -409,12 +397,12 @@
     "            inputs = self.processor(img, return_tensors=\"pt\").to(self.device)\n",
     "            # Use greedy decoding (num_beams=1) and short max_length for speed in this demo\n",
     "            with torch.no_grad():\n",
-    "                out = self.model.generate(**inputs, max_length=30, num_beams=1, do_sample=False)\n",
+    "                out = self.model.generate(**inputs, max_length=30, num_beams=3, do_sample=False)\n",
     "            \n",
     "            caption = self.processor.decode(out[0], skip_special_tokens=True)\n",
     "            captions.append(caption)\n",
     "\n",
-    "        return pa.array(captions)\n"
+    "        return pa.array(captions)"
    ]
   },
   {
@@ -434,12 +422,12 @@
    },
    "outputs": [],
    "source": [
-    "for column in [\"image_embedding\", \"captions\"]:\n",
+    "for column in [\"image_embedding\", \"caption\", \"caption_embedding\"]:\n",
     "    if (column in table.schema.names):\n",
     "        table.drop_columns([column])\n",
     "        \n",
     "table.add_columns({\n",
-    "    \"image_embedding\": GenEmbeddings(),\n",
+    "    \"image_embedding\": GenImageEmbeddings(),\n",
     "    \"caption\": GenCaptions(),\n",
     "})"
    ]
@@ -486,14 +474,115 @@
    },
    "outputs": [],
    "source": [
-    "table.search().limit(3).to_pandas()"
+    "table.search().limit(2).to_pandas().iloc[0:3]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Wrapping up\n",
+    "### Features on Features\n",
+    "\n",
+    "Of course, feature engineering workflows often include chains of features: features that depend on other features we've already computed! Let's make some text embeddings for those captions we just generated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@udf(version=\"0.1\", num_gpus=1 if torch.cuda.is_available() else 0, data_type=pa.list_(pa.float32(), 512))\n",
+    "class GenTextEmbeddings(Callable):\n",
+    "    def __init__(self):\n",
+    "        self.is_loaded=False\n",
+    "\n",
+    "    def setup(self):\n",
+    "        self.model, _, self.preprocess = open_clip.create_model_and_transforms(\"ViT-B-32\", pretrained=\"laion2b_s34b_b79k\")\n",
+    "        self.tokenizer = open_clip.get_tokenizer(\"ViT-B-32\")\n",
+    "        self.device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "        self.model = self.model.to(self.device).eval()\n",
+    "\n",
+    "    def __call__(self, caption: pa.Array) -> pa.Array:\n",
+    "        if not self.is_loaded:\n",
+    "            self.setup()\n",
+    "\n",
+    "        embeddings = []\n",
+    "        for this_caption in caption:\n",
+    "            # Convert PyArrow scalar to Python string\n",
+    "            caption_str = this_caption.as_py() if hasattr(this_caption, 'as_py') else str(this_caption)\n",
+    "            # Tokenizer expects a list of strings, not a single string\n",
+    "            tokens = self.tokenizer([caption_str])\n",
+    "            tokens = tokens.to(self.device)\n",
+    "            with torch.no_grad():\n",
+    "                embeddings.append(self.model.encode_text(tokens).squeeze().cpu().numpy().astype(np.float32))\n",
+    "\n",
+    "        return pa.array(embeddings)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"caption_embedding\" in table.schema.names:\n",
+    "    table.drop_columns([\"caption_embedding\"])\n",
+    "    \n",
+    "table.add_columns({\n",
+    "    \"caption_embedding\": GenTextEmbeddings(),\n",
+    "})\n",
+    "table.backfill(\"caption_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table.search().limit(1).to_pandas().iloc[0:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Updating\n",
+    "\n",
+    "Let's add some new clothes to our table and rerun the backfills to add all our derived features. This will only recompute our backfills on the new rows. This doesn't save that much time in this tutorial, but it absolutely does in production. Imagine adding new data daily; you won't want to recompute your costly features on all your data every day!\n",
+    "\n",
+    "As we do the following backfills, you will notice this as the progress bars start at \"1000/1500\", reflecting that the original 1000 rows have already been computed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_rows = list(generate_rows(df, IMG_DIR, start=DATASET_SIZE, end=DATASET_SIZE+500))\n",
+    "table.add(new_rows)\n",
+    "table.backfill(\"color_tags\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
+    "table.backfill(\"image_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
+    "table.backfill(\"caption\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)\n",
+    "table.backfill(\"caption_embedding\", checkpoint_size=CHECKPOINT_SIZE, concurrency=CONCURRENCY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table.to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Wrapping up\n",
     "\n",
     "That's the basics of feature engineering! If you wanted to go on to query this table, you might build indexes, as in the next cell:"
    ]
@@ -510,6 +599,13 @@
     "table.create_fts_index(\"caption\")\n",
     "# Vector Index: This will allow us to perform fast similarity searches on our `image_embedding` column.\n",
     "table.create_index(vector_column_name=\"image_embedding\", num_sub_vectors=128)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And if you want to expand this to run on a Ray cluster, to scale up to production use, see [Execution Contexts](https://docs.lancedb.com/geneva/jobs/contexts) for more info on how to do so."
    ]
   }
  ],
